src/styles/styles.css
html {
  scroll-behavior: smooth;
}

/*Import the local Jost font files instead of using Google Fonts to use them*/
@font-face {
  font-family: Jost;
  font-style: normal;
  font-display: swap; /*When using swap as font-display, the browser will render the text with the fallback font and once it loads Jost, it'll swap over to it. Makes the site feel faster*/
  src: url(fonts/Jost.ttf);
}

@font-face {
  font-family: Jost;
  font-style: italic;
  font-display: swap; /*When using swap as font-display, the browser will render the text with the fallback font and once it loads Jost, it'll swap over to it. Makes the site feel faster*/
  src: url(fonts/Jost-Italic.ttf);
}

:root {
  --accent-color: #710a97; /* Initial value */
}

/*Scales down emojis*/
img.emoji{
  height: 1em;
  width: 1em;
  margin: 0 .05em 0 .1em;
  vertical-align: -0.1em;
 pointer-events: none; 
}

header{
  -webkit-backdrop-filter: saturate(180%) blur(20px); 
  backdrop-filter: saturate(180%) blur(20px); 
  background-color: #000000;
  background-color: #00000080;
  margin: 12px;
  padding: 12px;
  border-radius: 12px;
  position: sticky;
  top: 0px;
}

body{
  height: fit-content;
}


.boringBackground{
  background: #14011a;
}

main, footer{
  margin: 18px;
}

.centerer{
  display: flex;
  flex-direction: column;
  align-items: center;
  align-self: center;
}

.centererItems{
  display: flex;
  flex-direction: row;
  align-items: center;
  align-self: center;
}

.cvButton{
  color: white;
  font-family: Jost, sans-serif;
  background-color: #120218;
  background-color: #12021880;
  border: #120218 2px solid;
  border: #12021880 2px solid;
  padding: 12px;
  text-decoration: none;
  width: -moz-fit-content;
  width: fit-content;
  height: -moz-fit-content;
  height: fit-content;
  font-size: initial;
  cursor: pointer;
  transition: background-color .2s;
  font-size: initial;
  touch-action: manipulation;
  border-radius: 12px;
}

.cvButton:hover, .cvButton:focus{
  background-color: #120218;
  background-color: #120218db;
  transition: background-color .2s;
}

/*Styling for general text*/
h1,
p, a{
  color: white;
  font-family: Jost, sans-serif;
  text-align: center;
}

p.subTitle{
  color: rgb(203, 203, 203);
}

p.subTitleExp{
  color: rgb(180, 180, 180);
}

div.education, div.work{
  padding-top: 12px;
}

div.project{
  background-color: #120218;
  background-color: #12021880;
  padding: 12px;
  margin: 12px;
  border-radius: 12px;
  text-align: left;
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  justify-content: center;
  align-self: center;
}

div.project>p{
  text-align: left;
  margin: 12px;
  color: rgb(188, 188, 188);
}

div.project>div{
  display: flex;
  justify-content: center;
  align-self: center;
  align-items: center;
  flex-direction: row;
  flex-wrap: wrap;
  background-color: #000000;
  background-color: #00000059;
  padding: 8px;
  margin: 8px;
  border-radius: 12px;
}

div.project>div>p{
  text-align: center;
  margin: 12px;
  color: rgb(188, 188, 188);
  white-space: nowrap;
  text-decoration: none;
}

div.project>div>p>a{
  text-align: center;
  color: rgb(188, 188, 188);
  white-space: nowrap;
  text-decoration: none;
  transition: color .2s;
}

div.project>div>p>a:hover{
  color: white;
  transition: color .2s;
}

div.project>p.projectName{
  color: white;
}

.WIP{
  color: orange !important;
}


.completed{
  color: green !important;
}

/*Adding a wrapper for the language selector*/
div.langWrapper{
  display: flex;
  flex-direction: row-reverse;
}

.p404Wrapper, .navWrapper{
  display: flex;
}

/*Styling the language selector button*/
.lang, .navButton{
  color: white;
  font-family: Jost, sans-serif;
  background-color: #120218;
  background-color: #12021880;
  border: #120218 2px solid;
  border: #12021880 2px solid;
  padding: 12px;
  text-decoration: none;
  width: -moz-fit-content;
  width: fit-content;
  height: -moz-fit-content;
  height: fit-content;
  font-size: initial;
  cursor: pointer;
  transition: background-color .2s;
  font-size: initial;
  touch-action: manipulation;
}

.navButton, .emailOK{
  border-radius: 12px 12px 12px 12px;
  padding: 12px;
  margin-right:12px;
}

/*More styling for the language selector button*/
.dropButton{
  border-radius: 12px 12px 12px 12px;
}

/*Styling for the language selector button that gets added when pressed using JS and removed once depressed*/
.dropButtonPressed{
  border-radius: 12px 12px 0px 0px;
}

/*Styling for the language selector button on hover and focus */
.lang:hover, .lang:focus, .navButton:hover, .navButton:focus{
  background-color: #120218;
  background-color: #120218db;
  transition: background-color .2s;
}

.activeChoice, .dropButtonPressed{
  background-color: #000000;
}
/* The container <div> - needed to position the dropdown content */
.dropdown {
  position: absolute;
  display: inline-block;
}

/* Dropdown Content (Hidden by Default) */
.dropdownContent {
  display: none;
  position: absolute;
  background-color: rgb(0, 0, 0);
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0);
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
  right: 0;
  border-radius: 12px 0px 12px 12px;
}

/* Links inside the dropdown */
.dropdownContent a {
  background-color: rgba(0, 0, 0);
  background-color: rgba(0, 0, 0, 0.476);
  transition: background-color .2s;
  padding: 12px 16px;
  text-decoration: none;
  text-align: left;
  display: block;
  color: white;
  font-family: Jost, sans-serif;
  padding: 12px;
  text-decoration: none;
  border-radius: 12px;
  border: none;
  font-size: initial;
  cursor: pointer;
  transition: background-color .2s;
}

/* Change color of dropdown links on hover */
.dropdownContent a:hover {
  background-color: rgba(67, 67, 67);
  background-color: rgba(67, 67, 67, 0.476);
  transition: background-color .2s;
}
/* ... */

